# clutch

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  build.rs  system_architecture.md
.github/workflows/: ci.yml  homebrew.yml  release.yml
openspec/changes/archive/2026-03-14-clutch-living-list/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-15-torrent-control/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-22-add-torrents/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-22-detail-inspector/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-27-extended-list-material/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-30-settings-and-profiles/: design.md  tasks.md
openspec/changes/archive/2026-03-31-remove-keychain-passphrase/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-31-ui-refresh-screens/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-31-ui-refresh-theme-components/: design.md  proposal.md  tasks.md
openspec/changes/clutch-living-list/: tasks.md
openspec/changes/github-ci-workflow/: proposal.md  tasks.md
openspec/changes/queue-management/: proposal.md
openspec/changes/settings-and-profiles/: proposal.md
openspec/specs/add-torrent/: spec.md
openspec/specs/app-packaging/: spec.md
openspec/specs/connection-screen/: spec.md
openspec/specs/context-menu/: spec.md
openspec/specs/credential-encryption/: spec.md
openspec/specs/file-selection/: spec.md
openspec/specs/github-ci/: spec.md
openspec/specs/keyboard-navigation/: spec.md
openspec/specs/m3-components/: spec.md
openspec/specs/material-theme/: spec.md
openspec/specs/queue-configuration/: spec.md
openspec/specs/readme/: spec.md
openspec/specs/recent-download-paths/: spec.md
openspec/specs/rpc-client/: spec.md
openspec/specs/set-data-location/: spec.md
openspec/specs/torrent-list/: spec.md
openspec/specs/torrent-options/: spec.md
openspec/specs/torrent-status-filtering/: spec.md
openspec/specs/tray-icon/: spec.md
openspec/specs/turtle-mode/: spec.md
src/: app.rs  auth.rs  crypto.rs  format.rs  lib.rs  main.rs  profile.rs  rpc.rs  theme.rs  tray.rs
src/app/: keyboard.rs  routing.rs  settings_bridge.rs
src/auth/: mod.rs  update.rs  view.rs
src/rpc/: api.rs  error.rs  mod.rs  models.rs  transport.rs  worker.rs
src/screens/: connection.rs  inspector.rs  main_screen.rs  mod.rs  settings.rs  torrent_list.rs
src/screens/inspector/: mod.rs  state.rs  update.rs  view.rs
src/screens/settings/: draft.rs  mod.rs  state.rs  update.rs  view.rs
src/screens/torrent_list/: add_dialog.rs  columns.rs  dialogs.rs  filters.rs  mod.rs  sort.rs  toolbar.rs  update.rs  view.rs  worker.rs
src/theme/: buttons.rs  containers.rs  inputs.rs  progress.rs  segmented.rs  selection.rs
(+82 files in other folders)
