[package]
name = "clutch"
version = "0.5.0"
edition = "2024"

[dependencies]
iced = { version = "0.14", features = ["tokio", "canvas", "image"] }
# iced_aw 0.13 is the version that targets iced 0.14 (0.11/0.12 target iced 0.13).
# FloatingElement is not in iced_aw 0.13; FAB→toolbar icon fallback applied (design D7).
iced_aw = { version = "0.13", features = ["tabs"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rfd = "0.15"
base64 = "0.22"
lava_torrent = "0.11"

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["full"] }
