[package]
name = "clutch"
version = "0.12.0"
edition = "2024"

[dependencies]
argon2 = "0.5"
base64 = "0.22"
chacha20poly1305 = "0.10"
dark-light = "1"
dirs = "5"
iced = { version = "0.14", features = ["tokio", "canvas", "image"] }
iced_aw = { version = "0.13", features = ["tabs"] }
image = "0.25"
lava_torrent = "0.11"
rand = "0.8"
secrecy = { version = "0.8", features = ["alloc"] }
reqwest = { version = "0.12", features = ["json"] }
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tray-icon = { version = "0.21", default-features = false }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
winres = "0.1"

[package.metadata.packager]
product-name = "Clutch"
identifier = "com.github.shitz.clutch"
description = "A modern transmission RPC client."
authors = ["Samuel Hitz <samuel.hitz@gmail.com>"]
homepage = "https://github.com/shitz/clutch"
license-file = "LICENSE"
icons = ["assets/Clutch_Icon.ico", "assets/Clutch_Icon_512x512.png"]
formats = ["dmg", "nsis", "appimage", "deb"]
before-packaging-command = "cargo build --release"

[package.metadata.packager.appimage]
files = { "assets/Clutch_Icon_512x512.png" = "usr/share/icons/hicolor/512x512/apps/Clutch.png" }
